--- a/src/components/sidebar/sidebar.scss
+++ b/src/components/sidebar/sidebar.scss
@@ -3,6 +3,11 @@
 @import url("https://use.fontawesome.com/releases/v5.0.11/css/all.css");
 
 
+.sidebar{
+  background-color: lightcoral;
+  flex: 0.82;
+}
+
 .animated-icon1 {
   width: 30px;
   height: 25px;
@@ -227,4 +232,29 @@
 body {
   margin: 0px;
   padding: 0px;
+}
+
+
+.bottom{
+  display: flex;
+  align-items: center;
+  margin: 10px;
+  .colorOptions{
+    width: 20px;
+    height: 20px;
+    border-radius: 5px;
+    border: 1px solid #7451f8;
+    margin: 5px;
+    cursor: pointer;
+
+    &:nth-child(1){
+      background-color: whitesmoke;
+    }
+    &:nth-child(2){
+      background-color: #333;
+    }
+    &:nth-child(3){
+      background-color: darkblue;
+    }
+  }
 }
