--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,3 +1,8 @@
 .home{
-    //background-color: purple;
-}
+    display: flex !important;
+    .homeContainer{
+        //background-color: lightblue;
+        flex: 4;
+    }
+    //background-color: lightblue;
+} 
