--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,8 +1,16 @@
+//@charset "ISO-8859-1";
+@import url("https://use.fontawesome.com/releases/v5.0.11/css/all.css");
+
 .home{
     display: flex !important;
     .homeContainer{
-        //background-color: lightblue;
         flex: 4;
+
+        .widgets{
+            display: flex;
+            padding: 20px;
+            //margin-right: 20px;
+            gap: 20px;
+        }
     }
-    //background-color: lightblue;
 } 
