--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -6,11 +6,15 @@
     .homeContainer{
         flex: 4;
 
-        .widgets{
+        .widgets, .charts{
             display: flex;
             padding: 20px;
             //margin-right: 20px;
             gap: 20px;
         }
+
+        .charts{
+            padding: 5px 20px;
+        }
     }
-} 
+}
