--- a/src/components/widget/widget.scss
+++ b/src/components/widget/widget.scss
@@ -1,6 +1,6 @@
 .widget{
     display: flex;
-    flex: 1;
+    //flex: 1;
     justify-content: space-between;
     padding: 10px;
     -webkit-box-shadow: 2px 4px 10px 1px rgba(0, 0, 0, 0.47);
