--- a/src/components/chart/chart.scss
+++ b/src/components/chart/chart.scss
@@ -1,4 +1,14 @@
 .chart{
     flex: 4;
-    
+    -webkit-box-shadow: 2px 4px 10px 1px rgba(0, 0, 0, 0.47);
+    box-shadow: 2px 4px 10px 1px rgba(0, 0, 0, 0.47);
+    padding: 10px;
+    color: gray;
+    .title{
+        margin-bottom: 5px;
+    }
+
+    .chartGrid{
+        stroke: rgb(70, 158, 221);
+    }
 }
