--- a/src/components/sidebar/sidebar.scss
+++ b/src/components/sidebar/sidebar.scss
@@ -1,4 +1,4 @@
-.sidebar{
+.sidebar {
   background-color: lightcoral;
   flex: 0.82;
 }
@@ -12,14 +12,14 @@
   -moz-transform: rotate(0deg);
   -o-transform: rotate(0deg);
   transform: rotate(0deg);
-  -webkit-transition: .5s ease-in-out;
-  -moz-transition: .5s ease-in-out;
-  -o-transition: .5s ease-in-out;
-  transition: .5s ease-in-out;
+  -webkit-transition: 0.5s ease-in-out;
+  -moz-transition: 0.5s ease-in-out;
+  -o-transition: 0.5s ease-in-out;
+  transition: 0.5s ease-in-out;
   cursor: pointer;
 }
 
-.animated-icon1 span{
+.animated-icon1 span {
   display: block;
   position: absolute;
   height: 3px;
@@ -31,16 +31,15 @@
   -moz-transform: rotate(0deg);
   -o-transform: rotate(0deg);
   transform: rotate(0deg);
-  -webkit-transition: .25s ease-in-out;
-  -moz-transition: .25s ease-in-out;
-  -o-transition: .25s ease-in-out;
-  transition: .25s ease-in-out;
+  -webkit-transition: 0.25s ease-in-out;
+  -moz-transition: 0.25s ease-in-out;
+  -o-transition: 0.25s ease-in-out;
+  transition: 0.25s ease-in-out;
 }
 
 .animated-icon1 span {
   background: #fff;
 }
-
 
 .animated-icon1 span:nth-child(1) {
   top: 0px;
@@ -76,19 +75,17 @@
   transform: rotate(-135deg);
 }
 
-
-
 .button {
-	height: 50px;
-	position: relative;
-	background: #ccc;
-	padding-top: 10px;
-	padding-bottom: 10px;
-	padding-left: 0px;
-	left: 0px;
-	right: 0px;
-	width: 100%;
-	overflow: hidden;
+  height: 50px;
+  position: relative;
+  background: #ccc;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  padding-left: 0px;
+  left: 0px;
+  right: 0px;
+  width: 100%;
+  overflow: hidden;
 }
 
 .nav-side-menu {
@@ -107,10 +104,12 @@
 
 .nav-side-menu .brand {
   background-color: #23282e;
+  color: #5197f8d0;
   line-height: 50px;
   display: block;
   text-align: center;
   font-size: 14px;
+  font-weight: bold;
 }
 .nav-side-menu .toggle-btn {
   display: none;
@@ -125,7 +124,7 @@
 }
 .nav-side-menu ul :not(collapsed) .arrow:before,
 .nav-side-menu li :not(collapsed) .arrow:before {
-  font-family: 'Font Awesome 5 Free';
+  font-family: "Font Awesome 5 Free";
   content: "\f13a";
   display: inline-block;
   padding-left: 10px;
@@ -161,7 +160,7 @@
 }
 .nav-side-menu ul .sub-menu li:before,
 .nav-side-menu li .sub-menu li:before {
-  font-family: 'Font Awesome 5 Free';
+  font-family: "Font Awesome 5 Free";
   content: "\f105";
   display: inline-block;
   padding-left: 10px;
@@ -229,12 +228,11 @@ body {
   padding: 0px;
 }
 
-
-.bottom{
+.bottom {
   display: flex;
   align-items: center;
   margin: 10px;
-  .colorOptions{
+  .colorOptions {
     width: 20px;
     height: 20px;
     border-radius: 5px;
@@ -242,13 +240,13 @@ body {
     margin: 5px;
     cursor: pointer;
 
-    &:nth-child(1){
+    &:nth-child(1) {
       background-color: whitesmoke;
     }
-    &:nth-child(2){
+    &:nth-child(2) {
       background-color: #333;
     }
-    &:nth-child(3){
+    &:nth-child(3) {
       background-color: darkblue;
     }
   }
