--- a/src/components/datatable/datatable.scss
+++ b/src/components/datatable/datatable.scss
@@ -1,61 +1,85 @@
-.datatable{
-    height: 600px;
-    padding: 20px;
+.datatable {
+  height: 500px;
+  padding: 20px;
 
-    .cellWithImg{
-        display: flex;
-        align-items: center;
+  .datatableTitle {
+    width: 100%;
+    font-size: 24px;
+    color: gray;
+    margin-bottom: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 
-        .cellImg{
-            width: 32px;
-            height: 32px;
-            border-radius: 50%;
-            object-fit: cover;
-            margin-right: 20px;
-        }
+    -webkit-box-shadow: 2px 4px 10px 1px rgba(0, 0, 0, 0.47);
+    box-shadow: 2px 4px 10px 1px rgba(201, 201, 201, 0.47);
+    padding: 10px;
+    border-radius: 5px;
+
+    .link {
+      text-decoration: none;
+      color: green;
+      font-size: 16px;
+      font-weight: 400;
+      border: 1px solid green;
+      padding: 5px;
+      border-radius: 5px;
+      cursor: pointer;
+    }
+  }
+
+  .cellWithImg {
+    display: flex;
+    align-items: center;
+
+    .cellImg {
+      width: 32px;
+      height: 32px;
+      border-radius: 50%;
+      object-fit: cover;
+      margin-right: 20px;
+    }
+  }
+
+  .cellWithStatus {
+    padding: 5px;
+    border-radius: 5px;
+
+    &.active {
+      color: green;
+      background-color: rgba(0, 128, 0, 0.151);
     }
 
-    .cellWithStatus{
-        padding: 5px;
-        border-radius: 5px;
-
-        &.active{
-            color: green;
-            background-color: rgba(0, 128, 0, 0.151);
-        }
-
-        &.pending{
-            color: goldenrod;
-            background-color: rgba(189, 189, 3, 0.103);
-        }
-
-        &.passive{
-            color: crimson;
-            background-color: rgba(255, 0, 0, 0.05);
-        }
+    &.pending {
+      color: goldenrod;
+      background-color: rgba(189, 189, 3, 0.103);
     }
 
-    .cellAction{
-        display: flex;
-        align-items: center;
-        gap: 15px;
+    &.passive {
+      color: crimson;
+      background-color: rgba(255, 0, 0, 0.05);
+    }
+  }
 
-        .viewButton{
-            padding: 2px 5px;
-            border-radius: 5px;
-            color: darkblue;
-            border: 1px dotted rgba(0, 0, 139, 0.596);
-            cursor: pointer;
-        }
+  .cellAction {
+    display: flex;
+    align-items: center;
+    gap: 15px;
 
-        .deleteButton{
-            padding: 2px 5px;
-            border-radius: 5px;
-            color: crimson;
-            border: 1px dotted rgba(0, 0, 139, 0.596);
-            cursor: pointer;
-        }
+    .viewButton {
+      padding: 2px 5px;
+      border-radius: 5px;
+      color: darkblue;
+      border: 1px dotted rgba(0, 0, 139, 0.596);
+      cursor: pointer;
     }
 
-
+    .deleteButton {
+      padding: 2px 5px;
+      border-radius: 5px;
+      color: crimson;
+      border: 1px dotted rgba(0, 0, 139, 0.596);
+      cursor: pointer;
+    }
+  }
 }
