--- a/src/components/sidebar/sidebar.scss
+++ b/src/components/sidebar/sidebar.scss
@@ -244,10 +244,10 @@ body {
       background-color: whitesmoke;
     }
     &:nth-child(2) {
-      background-color: #333;
+      background-color: #111;
     }
-    &:nth-child(3) {
-      background-color: darkblue;
-    }
+    // &:nth-child(3) {
+    //   background-color: darkblue;
+    // }
   }
 }
