some color changes

--- a/src/pages/form/form.scss
+++ b/src/pages/form/form.scss
@@ -5,6 +5,9 @@
   .fileUpload {
     margin-top: 10px;
   }
+  .uploadIcon {
+    cursor: pointer;
+  }
   .checkbox-input {
     label {
       display: inline-block;
