--- a/src/app.scss
+++ b/src/app.scss
@@ -1,5 +1,13 @@
 // Override default variables before the import
-// $body-bg: #000;
 
 // Import Bootstrap and its default variables
-@import '~bootstrap/scss/bootstrap.scss';
+// @import '~bootstrap/scss/bootstrap.scss';
+
+// @import 'bootstrap/scss/functions';
+// @import 'bootstrap/scss/variables';
+// @import 'bootstrap/scss/mixins';
+
+// @import  "bootstrap/scss/bootstrap.scss";
+
+// @import "bootstrap/scss/bootstrap.scss";
+
